# prettier-plugin-rust

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: Bug_report.md  Bug_report.yml  config.yml
crate/: Cargo.toml  README.md
extension/: LICENSE  README.md  package.json  tsconfig.json
extension/src/: index.ts
scripts/: build.ts  dev.format.ts  dev.repl.ts  tsconfig.json
src/: index.ts
src/format/: comments.ts  complexity.ts  core.ts  external.ts  plugin.ts  printer.ts  styling.ts  transform.ts
src/format/macros/: cfg_if.ts
src/transform/: index.ts  utils.ts
src/transform/custom/: attribute.ts  cfg_if.ts  utils.ts
src/utils/: common.ts  debug.ts
tests/: print.ts  test.build.ts
tests/output-ext/errors/: foo.rs
tests/output-ext/expressions/: block.f.rs  closure.f.rs  expr.f.rs  flow_expr.f.rs  ident.f.rs  literal.f.rs  match.f.rs  parens.f.rs  precedence.f.rs  range.f.rs
tests/output-ext/features/: arbitrary_enum_discriminant.f.rs  associated_type_bounds.f.rs  async_closure.f.rs  auto_traits.f.rs  const_generics_defaults.f.rs  const_trait_impl.f.rs  decl_macro.f.rs  destructuring_assignment.f.rs  generators.f.rs  if_let_guard.f.rs  inline_const.f.rs  inline_const_pat.f.rs  let_chains.f.rs  let_else.f.rs  negative_impls.f.rs  trait_alias.f.rs
tests/output-ext/macro/: attributes.f.rs  macro.invocation.f.rs  macro.item.f.rs  macro.match.f.rs  macro.tokens.f.rs  macro.transform.f.rs
tests/output-ext/types/: cast.f.rs  (+2 more)
(+122 files in other folders)
