[package]
name = "prettier"
version = "0.1.5"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Opinionated code formatter - `cargo fmt` alternative (Community) (WIP)"
repository = "https://github.com/jinxdash/prettier-plugin-rust"
keywords = ["format", "rustfmt", "tool", "development", "editor"]
categories = ["development-tools", "text-editors", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
